# CoSounds

./: .gitignore  API_OVERVIEW.md  DATABASE_DESIGN_FINAL.md  DATABASE_DESIGN_V3.md  DATABASE_DESIGN_V3_REFINED.md  JOTAI_AUTH_SUMMARY.md  Makefile  README.md  SETUP_GUIDE.md  V1_RUNNING_STATUS.md  V3_ARCHITECTURE_PLAN.md  create_test_tables.sql  force_register_laptop.py  nf  raspberry-pi-classic-scanner.py  raspberry-pi-scanner.py  render.yaml  setup_all_triggers.sql  test_bluetooth_flow.py
.claude/: settings.local.json
src/V3/player/: main.py  manifest.json  pyproject.toml
src/V3/player/src/app/: auth.py  client.py
src/learn/: pyproject.toml
src/learn/src/app/: train_linear.py
src/player/: manifest.json  pyproject.toml
src/player/src/: main.py
src/player/src/app/: auth.py  client.py
src/server/: API_DOCUMENTATION.md  README.md  build.sh  index.js  package-lock.json  procfile.dev  procfile.prod  pyproject.toml  render.yaml
src/server/middleware/: auth.js
src/server/routes/: auth.js  modelRoutes.js  prefVote.js  session.js
src/server/src/app/: admin.py  api.py  apps.py  forms.py  ml.py  models.py  tasks.py  urls.py  views.py  widgets.py
src/server/src/app/management/commands/: generate_cosounds.py  proc.py  vite.py
src/server/src/app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_vote_cosound_player_cosound_delete_cosound.py
src/server/src/app/templates/cotton/: voting_buttons.html  voting_cosound_layer.html  voting_voter_card.html
src/server/src/app/templates/voter/onboard/: content.html
src/server/src/app/templates/voter/playground/: content.html  index.html
src/server/src/app/templates/voter/profile/: content.html  index.html
src/server/src/app/templates/voter/voting/: content.html
src/server/src/config/: settings.py  urls.py
src/server/src/core/: admin.py  api.py  classify.py  forms.py  models.py  urls.py
src/server/src/core/management/commands/: refresh.py
src/server/src/core/migrations/: 0013_alter_player_playing.py  0019_alter_player_playing.py  0041_alter_player_playing.py  0045_alter_player_playing.py  0046_alter_player_playing.py  0055_alter_player_playing.py  0058_alter_player_playing.py
src/server/src/main/: asgi.py  settings.py  urls.py
src/server/src/users/: adapters.py  admin.py  apps.py  models.py  urls.py  views.py
src/server/src/users/migrations/: 0001_initial.py  0002_rename_nvector_voter_nvec.py
src/server/src/users/templates/account/: confirm_login_code.html  request_login_code.html
src/server/src/voter/: admin.py  models.py  urls.py
src/server/src/voter/templates/voter/: base.html
src/server/src/voting/: urls.py  views.py
src/server/src/voting/templates/voting/: base.html
src/server/vite/: package-lock.json  package.json  vite.config.js
src/server/vite/assets/css/: main.css
src/server/vite/static/: manifest.json
src/server/vite/static/vite/: test-2mheUq5d.css  test-BPWKmpQJ.css  test-CccEhXo7.css  test-DZIbx623.js  test-D_PPIqQr.js  test-Do2TqTXk.css  test-tvcdRFCR.css
(+227 files in other folders)
