[project]
name = "player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flet[all]>=0.80.2",
    "httpx>=0.27.0",
    "pip>=25.3",
    "pygame>=2.5.0",
    "python-dotenv==1.2.1",
    "questionary>=2.1.1",
    "requests==2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "audioop-lts==0.2.2",
    "audioread==3.1.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "decorator==5.2.1",
    "dotenv==0.9.9",
    "idna==3.11",
    "joblib==1.5.2",
    "lazy_loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.45.1",
    "msgpack==1.1.2",
    "numba==0.62.1",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "platformdirs==4.5.0",
    "pooch==1.8.2",
    "pycparser==2.23",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "redis==7.0.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "six==1.17.0",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "spotipy==2.25.1",
    "standard-aifc==3.13.0",
    "standard-chunk==3.13.0",
    "standard-sunau==3.13.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]

[tool.flet]
app.module = "main.py"
