[project]
name = "player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flet[all]>=0.80.2",
    "httpx>=0.27.0",
    "pip>=25.3",
    "pygame>=2.5.0",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[tool.flet]
app.module = "main.py"
